updated name margin top

--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ span {
         /* position: relative; */
     }
     .hero-1 .content {
-        /* margin-top: 50px; */
+        margin-top: 80px;
     }
 
     .hero-1 p {
