--- a/style.css
+++ b/style.css
@@ -110,21 +110,6 @@ header {
     height: 50px;
     position: fixed;
     z-index: 999999999;
-    
-    /* animation: movedown 1s 1 1s  linear forwards;
-    visibility: hidden; */
-} 
-
-@keyframes movedown {
-    0% {
-        transform: translateY(-100px);
-        visibility: visible;
-    }
-    100% {
-        transform: translateY(0);
-        visibility: visible;
-    }
-
 }
 
 .fa-solid,
@@ -133,8 +118,8 @@ header {
 } 
 
 .hero-1 {
-    background: url(assets/images/va1.webp);
-    background-position: bottom left;
+    background: url(assets/images/modern-futuristic-sci-fi-background_35913-2152.webp);
+    background-position: center;
     background-size: cover;
     background-attachment: fixed;
     height: 100%;
@@ -144,7 +129,7 @@ header {
 }
 
 .hero-1-cover {
-    background: rgba(21, 21, 43, 0.774);
+    background: rgba(21, 21, 43, 0.404);
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -158,7 +143,6 @@ header {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 20px;
     text-align: left;
-    /* margin-top: -60px; */
 }
 
 .hero-1 .content {
@@ -166,8 +150,6 @@ header {
     flex-direction: column;
     justify-content: center;
     margin-right: 40px;
-    animation: moveright 1s 1 1.5s  linear forwards;
-    visibility: hidden;
 }
 
 .my-image img {
@@ -251,8 +233,9 @@ header {
 .services {
     height: auto;
     width: 100%;
-    background:  rgba(7, 7, 19, 0.904);
+    background:  url(assets/images/futuristic-horizon-background-with-blue-light_52683-25182.webp);
     background-size: cover;
+    background-position: top right;
     background-attachment: fixed;
     padding-bottom: 50px;
     max-width: 1500px;
@@ -266,8 +249,6 @@ span {
     border: none;
     border-radius: 50%;
     margin-top: 11px;
-    animation: moveleft 1s 1 3s  linear forwards;
-    visibility: hidden;
 }
 
 .services h1{
@@ -277,19 +258,6 @@ span {
     color: white;
     text-transform: capitalize;
     font-size: 40px;
-    animation: moveright 1s 1 3s  linear forwards;
-    visibility: hidden;
-}
-
-@keyframes moveright {
-    0% {
-        transform: translateX(-200px);
-        visibility: visible;
-    }
-    100% {
-        transform: translateX(0);
-        visibility: visible;
-    }
 }
 
 .project-samples {
@@ -337,19 +305,6 @@ span {
     justify-content: space-around;
     margin: 40px 0;
     margin-right: 40px;
-    animation: moveleft 1s 1 3s  linear forwards;
-    visibility: hidden;
-}
-
-@keyframes moveleft {
-    0% {
-        transform: translateX(300px);
-        visibility: visible;
-    }
-    100% {
-        transform: translateX(0);
-        visibility: visible;
-    }
 }
 
 .services .social-icons {
@@ -432,7 +387,10 @@ span {
 .contact {
     height: 100vh;
     width: 100%;
-    background: rgba(7, 7, 19, 0.904);
+    background: url(assets/images/gradient-abstract-background-design_52683-70291.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     max-width: 1500px;
     margin: 0 auto;
     display: flex;
@@ -462,13 +420,6 @@ span {
     background: transparent;
     border-right: 2.5px dashed  #e4932fec;
     padding-right: 60px;
-    animation: moveright 1s 1 4s  linear forwards;
-    visibility: hidden;
-}
-
-.contact-address{
-    animation: moveleft 1s 1 4s  linear forwards;
-    visibility: hidden;
 }
 
 .contact-form h2,
@@ -501,19 +452,13 @@ span {
     font-size: 15px;
 }
 
+.contact-address a {
+    transition: all 0.5s ease-out;
+}
+
 .contact-address a:hover {
-    animation: movelink 60s 0s linear;
+    margin-left: 10px;
 }
-
-@keyframes movelink{
-    0% {
-        transform: translateY(-20px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
 
 .contact-address .fa-solid, 
 .contact-address .fa-brands {
@@ -637,7 +582,7 @@ span {
 
     .hero-1 {
         height: 70vh;
-        /* position: relative; */
+        background-position: bottom left;
     }
     .hero-1 .content {
         margin-top: 50px;
