update on background of sections

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ header {
 .services {
     height: auto;
     width: 100%;
-    background:  url(assets/images/futuristic-horizon-background-with-blue-light_52683-25182.webp);
+    background: linear-gradient(0deg, rgba(47, 47, 77, 0.712), rgba(35, 35, 58, 0.541)), url(assets/images/futuristic-horizon-background-with-blue-light_52683-25182.webp);
     background-size: cover;
     background-position: top right;
     background-attachment: fixed;
@@ -387,7 +387,7 @@ span {
 .contact {
     height: 100vh;
     width: 100%;
-    background: url(assets/images/gradient-abstract-background-design_52683-70291.webp);
+    background: linear-gradient(0deg, rgba(47, 47, 77, 0.712), rgba(35, 35, 58, 0.541)), url(assets/images/gradient-abstract-background-design_52683-70291.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
